4Sem/CW/OS/project/victim.yaml
apiVersion: v1
kind: Pod
metadata:
  name: victim
  namespace: tenant-a
  labels:
    app: victim
spec:
  nodeSelector:
    tenant: victim
  containers:
    - name: victim
      image: curlimages/curl:8.8.0
      command: ["sh", "-c", "sleep 3600"]
